--- a/.github/workflows/RISI_Data_Download.yml
+++ b/.github/workflows/RISI_Data_Download.yml
@@ -2,53 +2,51 @@ name: RISI Palm Oil Data Automation
 
 on:
   schedule:
-    - cron: '30 0 * * *' # Runs daily at 00:30 UTC
-  workflow_dispatch: # Allows manual trigger from the GitHub Actions tab
+    - cron: '30 0 * * *' # 每天 00:30 UTC 运行
+  workflow_dispatch: # 允许在 GitHub Actions 标签页手动触发
 
 jobs:
   run_risi_script:
-    runs-on: ubuntu-latest # Use the latest Ubuntu runner
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4 # Action to check out your repository code
+      - name:  checkout code
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.9' # Or your desired Python version (e.g., '3.10', '3.11')
+          python-version: '3.9'
 
-      - name: Install system dependencies for Chrome and Selenium
+      - name: Install Google Chrome
         run: |
           sudo apt-get update
-          sudo apt-get install -y chromium-browser chromium-chromedriver # Installs Chromium and its driver
+          sudo apt-get install -y google-chrome-stable
 
       - name: Install Python dependencies
         run: |
           pip install --upgrade pip
-          # Removed google-colab-selenium, pymupdf, Pillow as they are not used in this specific script's flow
-          pip install pygsheets retrying pandas requests selenium gspread gspread-dataframe
+          pip install pandas selenium pygsheets
 
       - name: Create temporary download directory
         run: |
-          mkdir -p /tmp/downloads # Ensure this matches DOWNLOAD_DIR in your Python script
+          # 确保这个路径与 Python 脚本中的 DOWNLOAD_DIR 变量完全一致
+          mkdir -p /tmp/downloads
 
       - name: Create Google Service Account key file
         env:
+          # `GCP_SERVICE_ACCOUNT_KEY` 是您需要在 GitHub 仓库 "Settings > Secrets and variables > Actions" 中设置的 Secret 名称
           GCP_SA_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
         run: |
+          # 这会创建一个 service_account_key.json 文件，Python 脚本将使用它进行认证
           echo "$GCP_SA_KEY" > service_account_key.json
 
       - name: Run Python script
         env:
-          # Set RISI login credentials from GitHub Secrets
+          # 设置 RISI 登录凭证，请确保在 GitHub Secrets 中设置了 RISI_USERNAME 和 RISI_PASSWORD
           RISI_USERNAME: ${{ secrets.RISI_USERNAME }}
           RISI_PASSWORD: ${{ secrets.RISI_PASSWORD }}
-          # Set the CHROMEDRIVER_PATH.
-          CHROMEDRIVER_PATH: /usr/bin/chromedriver
-          # DASHSCOPE_API_KEY and ICIS credentials are not needed for this specific RISI_data_download.py script
-          # If other scripts/workflows use them, they would be defined there.
+          # 为 Python 脚本提供 Chromedriver 的路径
+          CHROMEDRIVER_PATH: /usr/bin/google-chrome
         run: |
-          # Execute your main script.
-          # Ensure this path is correct if your Python file is in a subfolder.
           python RISI_data_download.py
